test/compile-fail/resolution/use-no-name-root-path/top.rhdl
mod a {
    mod b {
        mod c {
            mod d {}
        }
        use ::c::d;
    }
}
